--- a/style.css
+++ b/style.css
@@ -28,3 +28,16 @@ li img {
 .product-image {
   width: 200px;
 }
+.product{
+  display: flex;
+  align-items: center;
+  margin-top: 2vh;
+}
+.product-text{
+  margin: 20px;
+}
+.Remove-button{
+  background-color: red;
+  font-size: 1.5em;
+  margin: 20px;
+}
